// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for listType: ordered, orderType: alphabetically and isNestedList: false 1`] = `
":host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 2.5rem !important;
}
:host:before {
  position: absolute !important;
  content: counters(section, \\".\\", lower-latin) \\".\\" !important;
  right: calc(100% - 24px) !important;
  top: 0 !important;
  width: auto !important;
  height: auto !important;
  counter-increment: section !important;
  text-align: right !important;
  background-color: transparent !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
}"
`;

exports[`getComponentCss() should return correct css for listType: ordered, orderType: alphabetically and isNestedList: true 1`] = `
":host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 2.5rem !important;
}
:host:before {
  position: absolute !important;
  content: counters(section, \\".\\", lower-latin)  !important;
  right: calc(100% - 24px) !important;
  top: 0 !important;
  width: auto !important;
  height: auto !important;
  counter-increment: section !important;
  text-align: right !important;
  background-color: transparent !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
}"
`;

exports[`getComponentCss() should return correct css for listType: ordered, orderType: numbered and isNestedList: false 1`] = `
":host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 2.5rem !important;
}
:host:before {
  position: absolute !important;
  content: counters(section, \\".\\", decimal) \\".\\" !important;
  right: calc(100% - 24px) !important;
  top: 0 !important;
  width: auto !important;
  height: auto !important;
  counter-increment: section !important;
  text-align: right !important;
  background-color: transparent !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
}"
`;

exports[`getComponentCss() should return correct css for listType: ordered, orderType: numbered and isNestedList: true 1`] = `
":host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 2.5rem !important;
}
:host:before {
  position: absolute !important;
  content: counters(section, \\".\\", decimal)  !important;
  right: calc(100% - 24px) !important;
  top: 0 !important;
  width: auto !important;
  height: auto !important;
  counter-increment: section !important;
  text-align: right !important;
  background-color: transparent !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-weight: 400 !important;
  font-size: 1rem !important;
  line-height: 1.5 !important;
}"
`;

exports[`getComponentCss() should return correct css for listType: unordered, orderType: alphabetically and isNestedList: false 1`] = `
":host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 1.5rem !important;
}
:host:before {
  position: absolute !important;
  content: \\"\\" !important;
  left: 0 !important;
  top: calc(1.5em / 2 - 0.125em) !important;
  width: 0.25rem !important;
  height: 0.25rem !important;
  background-color: currentColor !important;
}"
`;

exports[`getComponentCss() should return correct css for listType: unordered, orderType: alphabetically and isNestedList: true 1`] = `
":host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 1.5rem !important;
}
:host:before {
  position: absolute !important;
  content: \\"\\" !important;
  left: 0 !important;
  top: calc(1.5em / 2) !important;
  width: 0.5rem !important;
  height: 1px !important;
  background-color: currentColor !important;
}"
`;

exports[`getComponentCss() should return correct css for listType: unordered, orderType: numbered and isNestedList: false 1`] = `
":host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 1.5rem !important;
}
:host:before {
  position: absolute !important;
  content: \\"\\" !important;
  left: 0 !important;
  top: calc(1.5em / 2 - 0.125em) !important;
  width: 0.25rem !important;
  height: 0.25rem !important;
  background-color: currentColor !important;
}"
`;

exports[`getComponentCss() should return correct css for listType: unordered, orderType: numbered and isNestedList: true 1`] = `
":host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 1.5rem !important;
}
:host:before {
  position: absolute !important;
  content: \\"\\" !important;
  left: 0 !important;
  top: calc(1.5em / 2) !important;
  width: 0.5rem !important;
  height: 1px !important;
  background-color: currentColor !important;
}"
`;
